@@ -7,9 +7,6 @@
 
 package org.openmarkov.core.model.network;
 
-/**
- * @author marias
- */
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -20,110 +17,31 @@ import org.openmarkov.core.model.network.constraint.*;
 import org.openmarkov.core.model.network.potential.*;
 import org.openmarkov.core.model.network.type.BayesianNetworkType;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Iterator;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+/**
+ * @author Manuel Arias
+ */
 @TestInstance(TestInstance.Lifecycle.PER_METHOD)
 public class ProbNetTest {
     
     private ProbNet emptyProbNet;
-    
-    private ProbNet peque;
-    
+
     /** ProbNet for test: Two chance nodes A --> B, one decision D, B --> D;
      * one utility U, A --> U, D --> U. */
     private ProbNet simpleProbNet;
-    
-    private ProbNet pruebaInferencia;
-    
+
     private Variable A;
     
     private Variable B;
     
     private Variable D;
-    
-    private Variable variableA;
-    
-    private Variable variableB;
-    
-    private Variable variableC;
-    
-    private Variable variableD;
-    
-    private Variable variableE;
-    
-    private Variable variableF;
-    
-    private Variable variableG;
-    
-    private Variable variableH;
-    
-    private Variable variableI;
-    
-    private Variable U;
-    
-    private ArrayList<Variable> aVariables;
-    
+
     private ArrayList<Variable> abVariables;
-    
-    private ArrayList<Variable> adVariables;
-    
-    private ArrayList<Variable> variablesA;
-    
-    private ArrayList<Variable> variablesBA;
-    
-    private ArrayList<Variable> variablesCAB;
-    
-    private ArrayList<Variable> variablesCA;
-    
-    private ArrayList<Variable> variablesEBC;
-    
-    private ArrayList<Variable> variablesFE;
-    
-    private ArrayList<Variable> variablesGD;
-    
-    private ArrayList<Variable> variablesI;
-    
-    private ArrayList<Variable> variablesDBI;
-    
-    private ArrayList<Variable> variablesba;
-    
-    private ArrayList<Variable> variablesAH;
-    
-    private ArrayList<Variable> variablesH;
-    
-    private TablePotential potentialvaluesA;
-    
-    private TablePotential potentialvaluesBA;
-    
-    private TablePotential potentialvaluesCAB;
-    
-    private TablePotential potentialvaluesCA;
-    
-    private TablePotential potentialvaluesEBC;
-    
-    private TablePotential potentialvaluesFE;
-    
-    private TablePotential potentialvaluesGD;
-    
-    private TablePotential potentialvaluesI;
-    
-    private TablePotential potentialvaluesDBI;
-    
-    private TablePotential potentialvaluesba;
-    
-    private TablePotential potentialvaluesAH;
-    
-    private TablePotential potentialvaluesH;
-    
-    private State absent;
-    
-    private State present;
-    
+
     private TablePotential pA;
     
     private TablePotential pBA;
@@ -131,13 +49,9 @@ public class ProbNetTest {
     private ExactDistrPotential pU;
     
     private EvidenceCase simpleEvidence;
-    
-    private PotentialRole role;
-    
+
     // private Finding eB;
-    
-    private Finding eA;
-    
+
     /** Compares to probNets: number of nodes, variables, links and potentials.
      * @param probNet1 <code>ProbNet</code>
      * @param probNet2 <code>ProbNet</code> */
@@ -145,12 +59,12 @@ public class ProbNetTest {
         // Compare network type restrictions
         assertEquals(probNet1.getNetworkType(), probNet2.getNetworkType());
         // Compare constraints
+        Set<Class<?>> constraintTypes1 = probNet1.getConstraints().stream()
+                .map(Object::getClass)
+                .collect(Collectors.toSet());
+
         for (PNConstraint constraint2 : probNet2.getConstraints()) {
-            boolean found = true;
-            for (PNConstraint constraint1 : probNet1.getConstraints()) {
-                found |= constraint1.getClass() == constraint2.getClass();
-            }
-            assertTrue(found);
+            assertTrue(constraintTypes1.contains(constraint2.getClass()));
         }
         // Compare variables
         // Number of nodes of each node type
@@ -182,9 +96,7 @@ public class ProbNetTest {
             
             // checks the links
             assertEquals(node1.getLinks().size(), node2.getLinks().size());
-            Iterator<Link<Node>> it1 = node1.getLinks().iterator();
-            while (it1.hasNext()) {
-                Link<Node> link1 = it1.next();
+            for (Link<Node> link1 : node1.getLinks()) {
                 Node linkNode1 = probNet2.getNode(link1.getFrom().getVariable().getName());
                 Node linkNode2 = probNet2.getNode(link1.getTo().getVariable().getName());
                 Link<Node> link2 = probNet2.getLink(linkNode1, linkNode2, link1.isDirected());
@@ -201,7 +113,7 @@ public class ProbNetTest {
             assertEquals(numPotentials1, potentials2.size());
             // Until now (24-11-2011) a node has 0 or 1 potentials
             if (numPotentials1 == 1) {
-                assertTrue(PotentialTest.equalPotentials(potentials1.get(0), potentials2.get(0)));
+                assertTrue(PotentialTest.equalPotentials(potentials1.getFirst(), potentials2.getFirst()));
             }
         }
     }
@@ -214,27 +126,27 @@ public class ProbNetTest {
         A = new Variable("A", 2);
         B = new Variable("B", 2);
         D = new Variable("D", 2);
-        U = new Variable("U");
-        U.setDecisionCriterion(new Criterion());
+        Variable u = new Variable("U");
+        u.setDecisionCriterion(new Criterion());
         // create Arrays of variables used in potentials
-        aVariables = new ArrayList<>(1);
+        ArrayList<Variable> aVariables = new ArrayList<>(1);
         aVariables.add(A);
         abVariables = new ArrayList<>(2);
         abVariables.add(B);
         abVariables.add(A);
-        adVariables = new ArrayList<>(2);
+        ArrayList<Variable> adVariables = new ArrayList<>(2);
         adVariables.add(A);
         adVariables.add(D);
         // create potentials
         pA = new TablePotential(aVariables, PotentialRole.CONDITIONAL_PROBABILITY);
-        pA.values[0] = 0.9;
-        pA.values[1] = 0.1;
+        pA.getValues()[0] = 0.9;
+        pA.getValues()[1] = 0.1;
         pBA = new TablePotential(abVariables, PotentialRole.CONDITIONAL_PROBABILITY);
-        pBA.values[0] = 0.2;
-        pBA.values[1] = 0.8;
-        pBA.values[2] = 0.9;
-        pBA.values[3] = 0.1;
-        pU = new ExactDistrPotential(Arrays.asList(U, A, D), PotentialRole.CONDITIONAL_PROBABILITY);
+        pBA.getValues()[0] = 0.2;
+        pBA.getValues()[1] = 0.8;
+        pBA.getValues()[2] = 0.9;
+        pBA.getValues()[3] = 0.1;
+        pU = new ExactDistrPotential(Arrays.asList(u, A, D), PotentialRole.CONDITIONAL_PROBABILITY);
         //		pU.setUtilityVariable(U);
         double[] utilityValues = new double[4];
         utilityValues[0] = 1;
@@ -248,37 +160,37 @@ public class ProbNetTest {
         // add potentials and variables
         simpleProbNet.addPotential(pA); // add variable and potential
         simpleProbNet.addNode(D, NodeType.DECISION);
-        simpleProbNet.addNode(U, NodeType.UTILITY);
+        simpleProbNet.addNode(u, NodeType.UTILITY);
         simpleProbNet.addPotential(pU);
         simpleProbNet.addPotential(pBA);
         simpleProbNet.addLink(B, D, true);
-        eA = new Finding(A, 0);
+        Finding eA = new Finding(A, 0);
         // eB = new Finding(B, 1);
         simpleEvidence = new EvidenceCase();
         simpleEvidence.addFinding(eA);
         
         //probNet peque
         //Variables
-        String a = new String("A");
-        String b = new String("B");
-        String c = new String("C");
+        String a = "A";
+        String b = "B";
+        String c = "C";
         
         //finite States variables
-        variableA = new Variable(a, 2);
-        variableB = new Variable(b, 2);
-        variableC = new Variable(c, 2);
+        Variable variableA = new Variable(a, 2);
+        Variable variableB = new Variable(b, 2);
+        Variable variableC = new Variable(c, 2);
         
         //additional properties
-        String relevance = new String("Relevance");
-        String value = new String("7.0");
+        String relevance = "Relevance";
+        String value = "7.0";
         
         variableA.setAdditionalProperty(relevance, value);
         variableB.setAdditionalProperty(relevance, value);
         variableC.setAdditionalProperty(relevance, value);
         
         //Setting variable states
-        absent = new State("ausente");
-        present = new State("presente");
+        State absent = new State("ausente");
+        State present = new State("presente");
         State[] states = {absent, present};
         
         variableA.setStates(states);
@@ -287,36 +199,36 @@ public class ProbNetTest {
         
         //Potentials
         //PotentialType type = PotentialType.TABLE;
-        role = PotentialRole.CONDITIONAL_PROBABILITY;
+        PotentialRole role = PotentialRole.CONDITIONAL_PROBABILITY;
         
         //Potential A
         double[] tableA = {0.2, 0.8};
-        
-        variablesA = new ArrayList<>();
+
+        ArrayList<Variable> variablesA = new ArrayList<>();
         variablesA.add(variableA);
-        
-        potentialvaluesA = new TablePotential(variablesA, role, tableA);
+
+        TablePotential potentialvaluesA = new TablePotential(variablesA, role, tableA);
         
         //Potential BA
         double[] tableBA = {0.7, 0.3, 0.9, 0.1};
-        
-        variablesBA = new ArrayList<>();
+
+        ArrayList<Variable> variablesBA = new ArrayList<>();
         variablesBA.add(variableB);
         variablesBA.add(variableA);
-        
-        potentialvaluesBA = new TablePotential(variablesBA, role, tableBA);
+
+        TablePotential potentialvaluesBA = new TablePotential(variablesBA, role, tableBA);
         
         //potencial CAB
         double[] tableCAB = {0.15, 0.29, 0.84, 0.98, 0.85, 0.71, 0.16, 0.02};
-        
-        variablesCAB = new ArrayList<>();
+
+        ArrayList<Variable> variablesCAB = new ArrayList<>();
         variablesCAB.add(variableC);
         variablesCAB.add(variableA);
         variablesCAB.add(variableB);
-        
-        potentialvaluesCAB = new TablePotential(variablesCAB, role, tableCAB);
-        
-        peque = new ProbNet();
+
+        TablePotential potentialvaluesCAB = new TablePotential(variablesCAB, role, tableCAB);
+
+        ProbNet peque = new ProbNet();
         
         NodeType nodeType = NodeType.CHANCE;
         
@@ -328,9 +240,9 @@ public class ProbNetTest {
         peque.addLink(variableA, variableB, true);
         peque.addLink(variableA, variableC, true);
         peque.addLink(variableB, variableC, true);
-        peque.addPotential((Potential) potentialvaluesA);
-        peque.addPotential((Potential) potentialvaluesBA);
-        peque.addPotential((Potential) potentialvaluesCAB);
+        peque.addPotential(potentialvaluesA);
+        peque.addPotential(potentialvaluesBA);
+        peque.addPotential(potentialvaluesCAB);
         
         //ProbNet pruebaInferencia
         
@@ -340,12 +252,12 @@ public class ProbNetTest {
         variableA = new Variable(a, 2);
         variableB = new Variable(b, 2);
         variableC = new Variable(c, 2);
-        variableD = new Variable("D", 2);
-        variableE = new Variable("E", 2);
-        variableF = new Variable("F", 2);
-        variableG = new Variable("G", 2);
-        variableH = new Variable("H", 2);
-        variableI = new Variable("I", 2);
+        Variable variableD = new Variable("D", 2);
+        Variable variableE = new Variable("E", 2);
+        Variable variableF = new Variable("F", 2);
+        Variable variableG = new Variable("G", 2);
+        Variable variableH = new Variable("H", 2);
+        Variable variableI = new Variable("I", 2);
         
         variableA.setAdditionalProperty(relevance, value);
         variableB.setAdditionalProperty(relevance, value);
@@ -373,78 +285,78 @@ public class ProbNetTest {
         
         //Potential CA
         double[] tableCA = {0.81, 0.19, 0.98, 0.02};
-        variablesCA = new ArrayList<>();
+        ArrayList<Variable> variablesCA = new ArrayList<>();
         variablesCA.add(variableC);
         variablesCA.add(variableA);
-        
-        potentialvaluesCA = new TablePotential(variablesCA, role, tableCA);
+
+        TablePotential potentialvaluesCA = new TablePotential(variablesCA, role, tableCA);
         
         //Potential EBC
         double[] tableEBC = {0.02, 0.98, 0.68, 0.32, 0.24, 0.76, 0.79, 0.21};
-        variablesEBC = new ArrayList<>();
+        ArrayList<Variable> variablesEBC = new ArrayList<>();
         variablesEBC.add(variableE);
         variablesEBC.add(variableB);
         variablesEBC.add(variableC);
-        
-        potentialvaluesEBC = new TablePotential(variablesEBC, role, tableEBC);
+
+        TablePotential potentialvaluesEBC = new TablePotential(variablesEBC, role, tableEBC);
         
         //potentialFE
         double[] tableFE = {0.12, 0.88, 0.77, 0.23};
-        variablesFE = new ArrayList<>();
+        ArrayList<Variable> variablesFE = new ArrayList<>();
         variablesFE.add(variableF);
         variablesFE.add(variableE);
-        
-        potentialvaluesFE = new TablePotential(variablesFE, role, tableFE);
+
+        TablePotential potentialvaluesFE = new TablePotential(variablesFE, role, tableFE);
         
         //potentialGD
         double[] tableGD = {0.49, 0.51, 0.75, 0.25};
-        variablesGD = new ArrayList<>();
+        ArrayList<Variable> variablesGD = new ArrayList<>();
         variablesGD.add(variableG);
         variablesGD.add(variableD);
-        
-        potentialvaluesGD = new TablePotential(variablesGD, role, tableGD);
+
+        TablePotential potentialvaluesGD = new TablePotential(variablesGD, role, tableGD);
         
         //Potential I
         double[] tableI = {0.85, 0.15};
-        
-        variablesI = new ArrayList<>();
+
+        ArrayList<Variable> variablesI = new ArrayList<>();
         variablesI.add(variableI);
-        
-        potentialvaluesI = new TablePotential(variablesI, role, tableI);
+
+        TablePotential potentialvaluesI = new TablePotential(variablesI, role, tableI);
         
         //Potential DBI
         double[] tableDBI = {0.22, 0.78, 0.86, 0.14, 0.57, 0.43, 0.9, 0.1};
-        variablesDBI = new ArrayList<>();
+        ArrayList<Variable> variablesDBI = new ArrayList<>();
         variablesDBI.add(variableD);
         variablesDBI.add(variableB);
         variablesDBI.add(variableI);
-        
-        potentialvaluesDBI = new TablePotential(variablesDBI, role, tableDBI);
+
+        TablePotential potentialvaluesDBI = new TablePotential(variablesDBI, role, tableDBI);
         
         //potentialBA
         double[] tableba = {0.77, 0.23, 0.26, 0.74};
-        variablesba = new ArrayList<>();
+        ArrayList<Variable> variablesba = new ArrayList<>();
         variablesba.add(variableB);
         variablesba.add(variableA);
-        
-        potentialvaluesba = new TablePotential(variablesba, role, tableba);
+
+        TablePotential potentialvaluesba = new TablePotential(variablesba, role, tableba);
         
         //potentialAH
         double[] tableAH = {0.09, 0.91, 0.83, 0.17};
-        variablesAH = new ArrayList<>();
+        ArrayList<Variable> variablesAH = new ArrayList<>();
         variablesAH.add(variableA);
         variablesAH.add(variableH);
-        
-        potentialvaluesAH = new TablePotential(variablesAH, role, tableAH);
+
+        TablePotential potentialvaluesAH = new TablePotential(variablesAH, role, tableAH);
         
         //Potential H
         double[] tableH = {0.68, 0.32};
-        variablesH = new ArrayList<>();
+        ArrayList<Variable> variablesH = new ArrayList<>();
         variablesH.add(variableH);
-        
-        potentialvaluesH = new TablePotential(variablesH, role, tableH);
-        
-        pruebaInferencia = new ProbNet();
+
+        TablePotential potentialvaluesH = new TablePotential(variablesH, role, tableH);
+
+        ProbNet pruebaInferencia = new ProbNet();
         
         pruebaInferencia.addNode(variableA, nodeType);
         pruebaInferencia.addNode(variableB, nodeType);
@@ -468,15 +380,15 @@ public class ProbNetTest {
         pruebaInferencia.addLink(variableH, variableA, true);
         pruebaInferencia.addLink(variableI, variableD, true);
         
-        pruebaInferencia.addPotential((Potential) potentialvaluesCA);
-        pruebaInferencia.addPotential((Potential) potentialvaluesEBC);
-        pruebaInferencia.addPotential((Potential) potentialvaluesFE);
-        pruebaInferencia.addPotential((Potential) potentialvaluesGD);
-        pruebaInferencia.addPotential((Potential) potentialvaluesI);
-        pruebaInferencia.addPotential((Potential) potentialvaluesDBI);
-        pruebaInferencia.addPotential((Potential) potentialvaluesba);
-        pruebaInferencia.addPotential((Potential) potentialvaluesH);
-        pruebaInferencia.addPotential((Potential) potentialvaluesAH);
+        pruebaInferencia.addPotential(potentialvaluesCA);
+        pruebaInferencia.addPotential(potentialvaluesEBC);
+        pruebaInferencia.addPotential(potentialvaluesFE);
+        pruebaInferencia.addPotential(potentialvaluesGD);
+        pruebaInferencia.addPotential(potentialvaluesI);
+        pruebaInferencia.addPotential(potentialvaluesDBI);
+        pruebaInferencia.addPotential(potentialvaluesba);
+        pruebaInferencia.addPotential(potentialvaluesH);
+        pruebaInferencia.addPotential(potentialvaluesAH);
         
     }
     
@@ -530,7 +442,7 @@ public class ProbNetTest {
         probNet.addPotential(pBA);
         assertEquals(2, probNet.getNumPotentials());
         Node node = probNet.getNode(B);
-        assertEquals(pBA, node.getPotentials().get(0));
+        assertEquals(pBA, node.getPotentials().getFirst());
     }
     
     @Test public void testGetNodeString() {
@@ -558,7 +470,7 @@ public class ProbNetTest {
     }
     
     @Test public void testGetVariables() {
-        List<Variable> variables = simpleProbNet.getChanceAndDecisionVariables();
+        List<Variable> variables = simpleProbNet.getNonUtilityVariables();
         assertEquals(3, variables.size());
         assertTrue(variables.contains(A));
         assertTrue(variables.contains(B));
@@ -583,10 +495,11 @@ public class ProbNetTest {
         assertTrue(potentials.contains(pBA));
         assertTrue(potentials.contains(pU));
     }
-    
+
+    /* Just make sure that the class <code>ProbNet</code> returns the correct
+     *  number of potentials with the correct variables. */
     @Test
-    /** Just make sure that the class <code>ProbNet</code> returns the correct
-     *  number of potentials with the correct variables. */ public void testGetProjectedPotentials()
+    public void testGetProjectedPotentials()
             throws NonProjectablePotentialException {
         List<? extends Potential> projectedPotentials = simpleProbNet.tableProjectPotentials(simpleEvidence);
         assertEquals(3, projectedPotentials.size());
@@ -613,9 +526,7 @@ public class ProbNetTest {
     
     @Test public void testGetNodesArrayListOfVariable() {
         List<Variable> abVariables = new ArrayList<>();
-        for (Variable variable : this.abVariables) {
-            abVariables.add(variable);
-        }
+        abVariables.addAll(this.abVariables);
         List<Node> chanceNodes = simpleProbNet.getNodes(abVariables);
         assertEquals(2, chanceNodes.size());
         Variable variable0 = chanceNodes.get(0).getVariable();
@@ -649,11 +560,11 @@ public class ProbNetTest {
         // test decision nodes
         List<Node> decisionNodes = simpleProbNet.getNodes(NodeType.DECISION);
         assertEquals(1, decisionNodes.size());
-        assertEquals(D, decisionNodes.get(0).getVariable());
+        assertEquals(D, decisionNodes.getFirst().getVariable());
         // test utility nodes
         List<Node> utilityNodes = simpleProbNet.getNodes(NodeType.UTILITY);
         assertEquals(1, utilityNodes.size());
-        Node utilityNode = utilityNodes.get(0);
+        Node utilityNode = utilityNodes.getFirst();
         assertTrue(utilityNode.getPotentials().contains(pU));
     }
     
@@ -686,10 +597,10 @@ public class ProbNetTest {
         // test 1 potential
         List<Potential> AUtilityPotentials = simpleProbNet.getUtilityPotentials(A);
         assertEquals(1, AUtilityPotentials.size());
-        assertEquals(pU, AUtilityPotentials.get(0));
+        assertEquals(pU, AUtilityPotentials.getFirst());
         AUtilityPotentials = simpleProbNet.getUtilityPotentials(D);
         assertEquals(1, AUtilityPotentials.size());
-        assertEquals(pU, AUtilityPotentials.get(0));
+        assertEquals(pU, AUtilityPotentials.getFirst());
     }
     
     @Test public void testGetPotentials2() {
@@ -779,7 +690,7 @@ public class ProbNetTest {
     
     @Test public void testCopy() {
         ProbNet copied = simpleProbNet.copy();
-        List<Variable> copiedVariables = copied.getChanceAndDecisionVariables();
+        List<Variable> copiedVariables = copied.getNonUtilityVariables();
         // test variables
         assertEquals(3, copiedVariables.size());
         assertTrue(copiedVariables.contains(A));
@@ -794,7 +705,7 @@ public class ProbNetTest {
         Node nodeB = copied.getNode(B);
         assertTrue(nodeB.getPotentials().contains(pBA));
         Node nodeD = copied.getNode(D);
-        Node nodeU = nodeD.getChildren().get(0);
+        Node nodeU = nodeD.getChildren().getFirst();
         assertTrue(nodeU.getPotentials().contains(pU));
         // test graph structure
         assertTrue(nodeA.getChildren().contains(nodeB));
